@@ -643,9 +643,6 @@ lto_input_ts_decl_common_tree_pointers (struct lto_input_block *ib,
      for early inlining so drop it on the floor instead of ICEing in
      dwarf2out.c.  */
 
-  if (TREE_CODE (expr) == PARM_DECL)
-    TREE_CHAIN (expr) = streamer_read_chain (ib, data_in);
-
   if ((TREE_CODE (expr) == VAR_DECL
        || TREE_CODE (expr) == PARM_DECL)
       && DECL_HAS_VALUE_EXPR_P (expr))
@@ -670,7 +667,7 @@ lto_input_ts_decl_non_common_tree_pointers (struct lto_input_block *ib,
 {
   if (TREE_CODE (expr) == FUNCTION_DECL)
     {
-      DECL_ARGUMENTS (expr) = stream_read_tree (ib, data_in);
+      DECL_ARGUMENTS (expr) = streamer_read_chain (ib, data_in);
       DECL_RESULT (expr) = stream_read_tree (ib, data_in);
     }
   else if (TREE_CODE (expr) == TYPE_DECL)
